--- a/twitter_testing.Rmd
+++ b/twitter_testing.Rmd
@@ -6,11 +6,13 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, warning = F)
 ```
 
 ```{r}
 library(twitteR)
+library(rjson)
+library(jsonlite)
 library(tidyverse)
 library(ROAuth)
 library(streamR)
@@ -18,30 +20,27 @@ library(digest)
 ```
 
 ```{r}
-setup_twitter_oauth("DonU0QGulacxyrmaW4JKgwLLT","P0OR4izESmpR4zkUM8oC3FriLilUjgutzg87E88BDl6uWGJmwl")
+my_oauth <- list(consumer_key = "AuWLI4cFncTAcZ9th8aWSUKfd",
+   consumer_secret = "HyQXYx0lnPnBXckEb00tIoX7XZG1YOA1gKEPldhX20Wp0PsG3i",
+   access_token="3442624097-yq09ZtH0GNY5wH2QA4nYeLVPiAYGG6btNKxZK1f",
+   access_token_secret = "Mg6MZSOKfEiUTEeFrXGtSwAKdc2k5mHWOqm9TBwEcZrbS")
+save(my_oauth, file = "my_oauth.Rdata")
 ```
 
 ```{r}
-requestURL <- "https://api.twitter.com/oauth/request_token"
-accessURL <- "https://api.twitter.com/oauth/access_token"
-authURL <- "https://api.twitter.com/oauth/authorize"
-consumerKey <- "DonU0QGulacxyrmaW4JKgwLLT"
-consumerSecret <- "P0OR4izESmpR4zkUM8oC3FriLilUjgutzg87E88BDl6uWGJmwl"
+load("my_oauth.Rdata")
 ```
 
 ```{r}
-my_oauth <- OAuthFactory$new(consumerKey = consumerKey, consumerSecret = consumerSecret, 
-    requestURL = requestURL, accessURL = accessURL, authURL = authURL)
-my_oauth$handshake(cainfo = system.file("CurlSSL", "cacert.pem", package = "RCurl"))
-save(my_oauth, file = "/Users/michaelhuang/Desktop/my_oauth.Rdata")
+filterStream(file.name="pak_streaming_tweets.json", track="Pakistan", 
+    timeout=60000, oauth=my_oauth)
+
+filterStream("tweets.json", track = c("Obama", "Biden"), timeout = 120, 
+  oauth = my_oauth)
 ```
 
 ```{r}
-load("/Users/michaelhuang/Desktop/my_oauth.Rdata")
-
+tweets <- parseTweets("pak_streaming_tweets.json")
 ```
 
-```{r}
-tweets.df <- parseTweets("tweets.json", simplify = TRUE)
-```
 
